[package]
name = "cal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { features = [] }
serde = "1.0.188"
serde_json = "1.0.107"
rocket = { version = "=0.5.0-rc.3", features = ["secrets", "tls", "json"] }
lazy_static = { }